--- a/src/index.css
+++ b/src/index.css
@@ -217,7 +217,7 @@ form > textarea {
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 420px) {
   h1 {
     font-weight: 300;
     font-size: 32px;
@@ -255,5 +255,13 @@ form > textarea {
 
   .nav-text {
     font-size: 1.5rem;
+  }
+
+  ._img_none {
+    display: none;
+  }
+
+  .img_full {
+    max-width: 100%;
   }
 }
