--- a/src/index.css
+++ b/src/index.css
@@ -160,9 +160,15 @@ form > textarea {
 }
 
 .project_header {
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 46.88px;
+}
+
+.about_header {
   font-size: 64px;
   font-weight: 300;
-  line-height: 24px;
+  line-height: 64px;
 }
 
 .nav-btn {
